      * diy-nerds: improved reward
   * Quality of Life
      * Make it explicit when all the escorts have jumped or landed
      * Player ship is no longer translucent when in stealth as it is redundant with the stealth icon
      * Show enemy/ally factions in the faction standing info window
      * Space dust is properly antialiased
      * Minor speed ups to patrol lane computations
   * New Content
      * 4 new missions
         * Nebula refugees
      * Added the Space Trader Society faction
      * More points of interest
      * Many, many new systems and space objects
      * Custom death animations for many ships
   * Engine
      * Map system viewer is more compact
      * Added hook.hail_spob
      * Events support tags
      * Editor supports tags
      * Library to handle conditionals for mission computer missions
      * Added support for disabling specific patrol lanes from being generated
      * Support for Lua scripting for ships
      * Changed api of evt.claim and misn.claim
   * Fixes
      * Typo and wording fixes
      * Fixed many corner case crashes in the editor
      * Fixed cargo missions not being generated in some parts of the universe

* 0.10.5 (unreleased)
   * Start counting effect stacks from 1 not 2
   * Fixed launcher weapons using outfit mass instead of ammo mass
   * taiomi: fixed claim check for last mission
   * Fixed some typos
   * Fixed equipment of Lancelot in "Sharkman Is Back" mission
   * nelly02: Nelly now stops recommending stuff that only does a little disable
   * Fixed some events not claiming systems that could interfere with other missions
   * hypergate_construction: should actually claim the system
   * Fixed some formatting in the alt text when hovering over outfits in the equipment window

* 0.10.4
   * Fixed crashes related to multiple effects being active at once
   * Fixed multiple mission_done hooks not passing parameter correctly
   * Fixed plugin strings not being initialized with mismatched saves